# linkverse-rs

./: .env.example  .gitignore  Cargo.toml  dump.rdb
sql/: 01_tables.pgsql  02_funcs.pgsql  03_triggers.pgsql  04_indexes.pgsql  05_views.pgsql  migration_notice.txt
src/: main.rs
src/database/: auth.rs  conn.rs  lazy.rs  mod.rs  posts.rs  users.rs
src/endpoints/: auth.rs  mod.rs  users.rs
src/entities/: post.rs  user.rs
src/extractors/: auth.rs
src/utils/: macros.rs  mod.rs  perms.rs  response.rs  security.rs  snowflake.rs  state.rs  storage.rs  thread_state.rs  validate.rs
