[package]
name = "linkverse-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"
sqlx = { version = "*", features = ["postgres", "runtime-tokio"] }
fred = "10.1.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
validator = "0.20.0"
