[package]
name = "linkverse-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"
fred = "10.1.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
validator = { version = "*", features = ["derive"] }
regex = "1.12.2"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
rand = "0.9.2"
sha2 = "0.10.9"
hex = "0.4.3"
tokio-postgres = "0.7.15"
deadpool-postgres = "0.14.1"
hmac = "0.12.1"
anyhow = "1.0.100"
